--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ https://www.tooplate.com/view/2115-marvel
                   </div>
               </div>
 
-    <!-- CONTACT 
+    <!-- CONTACT -->
     <section class="contact py-5" id="contact">
       <div class="container">
         <div class="row">
