Updated my details

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://www.tooplate.com/view/2115-marvel
                         <a href="#resume" class="nav-link"><span data-hover="Skills">Skills</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://linktr.ee/omkaravasare" class="nav-link"><span data-hover="Contact">Contact</span></a>
+                        <a href="https://linktr.ee/Omkaravasare1" class="nav-link"><span data-hover="Contact">Contact</span></a>
                     </li>
                 </ul>
 
@@ -103,8 +103,8 @@ https://www.tooplate.com/view/2115-marvel
                         <p>Building a successful product is a challenge. I am highly energetic in  web development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="/Omkar Avasare_resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
-                          <a href="https://linktr.ee/omkaravasare" class="btn custom-btn custom-btn-bg custom-btn-link">Linktree</a>
+                          <a href="Omkar Avasare_resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="https://linktr.ee/Omkaravasare1" class="btn custom-btn custom-btn-bg custom-btn-link">Linktree</a>
                         </div>
                     </div>
                 </div>
@@ -136,49 +136,6 @@ https://www.tooplate.com/view/2115-marvel
                             <a href="https://scruter.onrender.com"><img src="images/project/scruter.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://facerecon.pythonanywhere.com"><img src="images/project/facerecon.png" class="img-fluid" alt="facerecon"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://code-complexity-analyzer.vercel.app"><img src="images/project/code-complexity.png" class="img-fluid" alt="code-complexity-analyzer"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://netficks-clone.netlify.app/"><img src="images/project/netflix-clone.png" class="img-fluid" alt="netflix-clone"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://sound-pollution.netlify.app"><img src="images/project/sound.png" class="img-fluid" alt="sound-pollution"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://star-quiz-v2.netlify.app"><img src="images/project/star-quiz.png" class="img-fluid" alt="star-quiz"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://end-hunger.onrender.com"><img src="images/project/endhunger.png" class="img-fluid" alt="end-hunger"></a>
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info mt-5 pt-5">
-                            <a href="https://wheather666.netlify.app"><img src="images/project/wheater.png" class="img-fluid" alt="wheater-app"></a>
-                          </div>
-                        </div>
-
                       </div>
                     </div>
 
@@ -281,31 +238,19 @@ https://www.tooplate.com/view/2115-marvel
               <i class="devicon-android-plain colored"></i>
               <i class="devicon-linux-plain colored"></i>
               <i class="devicon-ubuntu-plain colored"></i>
-              <i class="devicon-apache-plain colored"></i>
-              <i class="devicon-nginx-original colored"></i>
               <i class="devicon-docker-plain colored"></i>
-              <i class="devicon-bash-plain colored"></i>
               <i class="devicon-bootstrap-plain-wordmark colored"></i>
               <i class="devicon-tailwindcss-plain colored"></i>
-              <i class="devicon-codeigniter-plain-wordmark colored"></i>
-              <i class="devicon-laravel-original colored"></i>
-              <i class="devicon-flask-original-wordmark colored"></i>
               <i class="devicon-nodejs-plain-wordmark colored"></i>
               <i class="devicon-express-original colored"></i>
-              <i class="devicon-axios-plain colored"></i>
-              <i class="devicon-eslint-plain-wordmark colored"></i>
-              <i class="devicon-nodemon-plain colored"></i>
               <i class="devicon-npm-original-wordmark colored"></i>
               <i class="devicon-git-plain-wordmark colored"></i>
               <i class="devicon-postman-plain colored"></i>
               <i class="devicon-github-original-wordmark colored"></i>
               <i class="devicon-vercel-original-wordmark colored"></i>
               <i class="devicon-netlify-plain-wordmark"></i>
-              <i class="devicon-stackoverflow-plain-wordmark colored"></i>
-              <i class="devicon-jquery-plain-wordmark colored"></i>
               <i class="devicon-mysql-plain-wordmark colored"></i>
               <i class="devicon-mongodb-plain-wordmark colored"></i>
-              <i class="devicon-mongoose-original colored"></i>
               <i class="devicon-vscode-plain-wordmark colored"></i>
             </div>
           </div>
