--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://www.tooplate.com/view/2115-marvel
                         <p>Building a successful product is a challenge. I am highly energetic in  web development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="Omkar Avasare_resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="Omkar Avasare_Resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="https://linktr.ee/Omkaravasare1" class="btn custom-btn custom-btn-bg custom-btn-link">Linktree</a>
                         </div>
                     </div>
@@ -133,7 +133,28 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info mt-5 pt-4">
-                            <a href="https://scruter.onrender.com"><img src="images/project/scruter.png" class="img-fluid" alt="project image"></a>
+                            <a href="https://scruter.vercel.app/"><img src="images/project/scruter.png" class="img-fluid" alt="project image"></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="owl-carousel owl-theme">
+                        <div class="item">
+                          <div class="project-info mt-5 pt-4">
+                           <img src="images/project/moviers1.jpeg" class="img-fluid" alt="project image"></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="owl-carousel owl-theme">
+                        <div class="item">
+                          <div class="project-info mt-5 pt-4">
+                           <img src="images/project/moviers2.jpeg" class="img-fluid" alt="project image"></a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="owl-carousel owl-theme">
+                        <div class="item">
+                          <div class="project-info mt-5 pt-4">
+                           <img src="images/project/facerecon.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
                       </div>
