Solved some small issues

--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@ https://www.tooplate.com/view/2115-marvel
                 
                 <div class="row">
                   <div class="col-lg-11 text-center mx-auto col-12">
-
                       <div class="col-lg-6 mx-auto">
                         <h2>Things I have made so far</h2>
                       </div>
@@ -136,30 +135,22 @@ https://www.tooplate.com/view/2115-marvel
                             <a href="https://scruter.vercel.app/"><img src="images/project/scruter.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
-                      </div>
-                      <div class="owl-carousel owl-theme">
                         <div class="item">
-                          <div class="project-info mt-5 pt-4">
-                           <img src="images/project/moviers1.jpeg" class="img-fluid" alt="project image"></a>
+                          <div class="project-info mt-5 pt-5">
+                           <img src="images/project/moviers1.jpeg" class="img-fluid" alt="project image">
                           </div>
                         </div>
-                      </div>
-                      <div class="owl-carousel owl-theme">
                         <div class="item">
-                          <div class="project-info mt-5 pt-4">
-                           <img src="images/project/moviers2.jpeg" class="img-fluid" alt="project image"></a>
+                          <div class="project-info mt-5 pt-5">
+                           <img src="images/project/moviers2.jpeg" class="img-fluid" alt="project image">
                           </div>
-                        </div>
-                      </div>
-                      <div class="owl-carousel owl-theme">
+                        </div>                      
                         <div class="item">
-                          <div class="project-info mt-5 pt-4">
-                           <img src="images/project/facerecon.png" class="img-fluid" alt="project image"></a>
+                          <div class="project-info mt-5 pt-5">
+                           <img src="images/project/facerecon.png" class="img-fluid" alt="project image">
                           </div>
-                        </div>
-                      </div>
+                        </div>                    
                     </div>
-
                   </div>
                 </div>
         </div>
